# fasting-tracker

./: .gitignore  README.md  pyproject.toml
fasting_tracker/: cli.py
