[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-cli"
version = "0.1.0"
authors = [
  { name="Ignacio Arzaut", email="arzautignacio@gmail.com" },
]
description = "A simple CLI tool to track your fasting schedule"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse",
]

[project.scripts]
fast = "fasting_tracker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fasting_tracker"]